generator client {
  provider = "prisma-client-js"
  previewFeatures = ["fullTextSearchPostgres"]
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
  directUrl = env("DIRECT_URL")
}

// ============================================================
// ENUMS
// ============================================================

enum UserRole {
  ADMIN
  CHAPTER_LEADER
  MEMBER

  @@map("user_role")
}

enum UserStatus {
  ACTIVE
  INACTIVE
  LOCKED

  @@map("user_status")
}

enum ChapterStatus {
  ACTIVE
  INACTIVE

  @@map("chapter_status")
}

enum MembershipStatus {
  ACTIVE
  LEFT

  @@map("membership_status")
}

enum InvitationRole {
  CHAPTER_LEADER
  MEMBER

  @@map("invitation_role")
}

enum InvitationStatus {
  PENDING
  ACCEPTED
  EXPIRED
  CANCELLED

  @@map("invitation_status")
}

enum CourseStatus {
  DRAFT
  PUBLISHED

  @@map("course_status")
}

enum CourseVisibility {
  PUBLIC
  PRIVATE

  @@map("course_visibility")
}

enum QuestionType {
  SINGLE_CHOICE
  MULTIPLE_CHOICE
  TRUE_FALSE

  @@map("question_type")
}

enum AttemptStatus {
  IN_PROGRESS
  SUBMITTED
  AUTO_SUBMITTED
  CANCELLED

  @@map("attempt_status")
}

enum VideoProvider {
  YOUTUBE

  @@map("video_provider")
}

// ============================================================
// MODELS
// ============================================================

model User {
  id               String     @id @default(uuid()) @db.Uuid
  email            String     @unique @db.VarChar(255)
  password_hash    String     @db.VarChar(255)
  role             UserRole
  status           UserStatus @default(ACTIVE)
  failed_login_count Int     @default(0)
  locked_until     DateTime?  @db.Timestamp
  created_at       DateTime   @default(now()) @db.Timestamp
  updated_at       DateTime   @updatedAt @db.Timestamp

  chapter_members  ChapterMember[]
  invitations      Invitation[] @relation("InvitedBy")
  courses          Course[]
  lessonProgress   LessonProgress[]
  attempts         Attempt[]
  audit_logs       AuditLog[]
  password_reset_tokens PasswordResetToken[]
  created_assessments   Assessment[]
  refresh_tokens        RefreshToken[]
  comments              LessonComment[]

  @@map("users")
  @@index([email])
  @@index([status])
  @@index([role])
}

model Chapter {
  id          String     @id @default(uuid()) @db.Uuid
  name        String     @unique @db.VarChar(255)
  description String?    @db.Text
  status      ChapterStatus @default(ACTIVE)
  created_at  DateTime   @default(now()) @db.Timestamp
  updated_at  DateTime   @updatedAt @db.Timestamp

  chapter_members ChapterMember[]
  invitations     Invitation[]

  @@map("chapters")
  @@index([status])
}

model ChapterMember {
  id         String    @id @default(uuid()) @db.Uuid
  chapter_id String    @db.Uuid
  user_id    String    @db.Uuid
  joined_at  DateTime  @default(now()) @db.Timestamp

  chapter    Chapter   @relation(fields: [chapter_id], references: [id], onDelete: Cascade)
  user      User      @relation(fields: [user_id], references: [id], onDelete: Cascade)

  @@map("chapter_members")
  @@unique([chapter_id, user_id])
  @@index([chapter_id, user_id])
}

model Invitation {
  id            String            @id @default(uuid()) @db.Uuid
  email         String            @db.VarChar(255)
  role          InvitationRole
  chapter_id    String            @db.Uuid
  invited_by    String            @db.Uuid
  token_hash    String            @unique @db.VarChar(255)
  status        InvitationStatus  @default(PENDING)
  expires_at    DateTime          @db.Timestamp
  accepted_at   DateTime?         @db.Timestamp
  cancelled_at  DateTime?         @db.Timestamp
  created_at    DateTime          @default(now()) @db.Timestamp

  chapter       Chapter           @relation(fields: [chapter_id], references: [id], onDelete: Cascade)
  invited_by_user User            @relation(fields: [invited_by], references: [id], name: "InvitedBy", onDelete: Cascade)

  @@map("invitations")
  @@index([email])
  @@index([status])
  @@index([expires_at])
  @@index([email, status])
}

model Course {
  id            String             @id @default(uuid()) @db.Uuid
  title         String             @db.VarChar(255)
  description   String?            @db.Text
  status        CourseStatus       @default(DRAFT)
  visibility    CourseVisibility   @default(PRIVATE)
  created_by    String             @db.Uuid
  published_at  DateTime?          @db.Timestamp
  created_at    DateTime           @default(now()) @db.Timestamp
  updated_at    DateTime           @updatedAt @db.Timestamp

  created_by_user User             @relation(fields: [created_by], references: [id], onDelete: Cascade)
  sessions      Session[]

  @@map("courses")
  @@index([status, visibility])
  @@index([created_by])
}

model Session {
  id          String     @id @default(uuid()) @db.Uuid
  course_id   String     @db.Uuid
  title       String     @db.VarChar(255)
  description String?    @db.Text
  sort_order  Int
  created_at  DateTime   @default(now()) @db.Timestamp
  updated_at  DateTime   @updatedAt @db.Timestamp

  course      Course     @relation(fields: [course_id], references: [id], onDelete: Cascade)
  lessons     Lesson[]

  @@map("sessions")
  @@index([course_id, sort_order])
}

model Lesson {
  id          String     @id @default(uuid()) @db.Uuid
  session_id  String     @db.Uuid
  title       String     @db.VarChar(255)
  description String?    @db.Text
  sort_order  Int
  created_at  DateTime   @default(now()) @db.Timestamp
  updated_at  DateTime   @updatedAt @db.Timestamp

  session     Session    @relation(fields: [session_id], references: [id], onDelete: Cascade)
  video       Video?
  documents   Document[]
  progress    LessonProgress[]
  comments    LessonComment[]
  assessment  Assessment?

  @@map("lessons")
  @@index([session_id, sort_order])
}

model Video {
  id                String         @id @default(uuid()) @db.Uuid
  lesson_id         String         @unique @db.Uuid
  provider          VideoProvider  @default(YOUTUBE)
  youtube_video_id  String         @db.VarChar(255)
  duration_seconds  Int
  title             String?        @db.VarChar(255)
  created_at        DateTime       @default(now()) @db.Timestamp
  updated_at        DateTime       @updatedAt @db.Timestamp

  lesson            Lesson         @relation(fields: [lesson_id], references: [id], onDelete: Cascade)

  @@map("videos")
  @@index([provider, youtube_video_id])
}

model Document {
  id         String    @id @default(uuid()) @db.Uuid
  lesson_id  String    @db.Uuid
  file_name  String    @db.VarChar(255)
  storage_key String   @db.VarChar(500)
  mime_type  String    @db.VarChar(100)
  file_size  BigInt
  created_at DateTime  @default(now()) @db.Timestamp
  updated_at DateTime  @updatedAt @db.Timestamp

  lesson     Lesson    @relation(fields: [lesson_id], references: [id], onDelete: Cascade)

  @@map("documents")
  @@index([lesson_id])
}

model LessonProgress {
  id                          String    @id @default(uuid()) @db.Uuid
  user_id                     String    @db.Uuid
  lesson_id                   String    @db.Uuid
  completed                   Boolean   @default(false)
  completed_at                DateTime? @db.Timestamp
  last_position_seconds       Int?
  furthest_watched_position_seconds Int?
  last_watched_at             DateTime? @db.Timestamp
  created_at                  DateTime  @default(now()) @db.Timestamp
  updated_at                  DateTime  @updatedAt @db.Timestamp

  user                        User      @relation(fields: [user_id], references: [id], onDelete: Cascade)
  lesson                      Lesson    @relation(fields: [lesson_id], references: [id], onDelete: Cascade)

  @@map("lesson_progress")
  @@unique([user_id, lesson_id])
  @@index([user_id, lesson_id])
  @@index([user_id])
  @@index([lesson_id])
}

model Assessment {
  id            String     @id @default(uuid()) @db.Uuid
  lesson_id     String     @unique @db.Uuid
  title         String     @db.VarChar(255)
  description   String?    @db.Text
  created_by    String     @db.Uuid
  created_at    DateTime   @default(now()) @db.Timestamp
  updated_at    DateTime   @updatedAt @db.Timestamp

  lesson        Lesson     @relation(fields: [lesson_id], references: [id], onDelete: Cascade)
  created_by_user User    @relation(fields: [created_by], references: [id], onDelete: Cascade)
  questions     Question[]
  attempts      Attempt[]

  @@map("assessments")
}

model Question {
  id              String         @id @default(uuid()) @db.Uuid
  assessment_id   String         @db.Uuid
  question_text   String         @db.Text
  question_type   QuestionType   @default(SINGLE_CHOICE)
  points          Int            @default(1)
  duration_seconds Int
  sort_order      Int
  explanation     String?        @db.Text
  created_at      DateTime       @default(now()) @db.Timestamp
  updated_at      DateTime       @updatedAt @db.Timestamp

  assessment      Assessment     @relation(fields: [assessment_id], references: [id], onDelete: Cascade)
  options         QuestionOption[]
  attempt_questions AttemptQuestion[]
  attempt_answers  AttemptAnswer[]

  @@map("questions")
  @@index([assessment_id, sort_order])
}

model QuestionOption {
  id            String     @id @default(uuid()) @db.Uuid
  question_id   String     @db.Uuid
  option_text   String     @db.Text
  is_correct    Boolean    @default(false)
  sort_order    Int

  question      Question   @relation(fields: [question_id], references: [id], onDelete: Cascade)
  attempt_answers AttemptAnswer[]

  @@map("question_options")
  @@index([question_id, sort_order])
  @@index([question_id])
}

model Attempt {
  id                String           @id @default(uuid()) @db.Uuid
  assessment_id     String           @db.Uuid
  user_id           String           @db.Uuid
  attempt_number    Int
  status            AttemptStatus    @default(IN_PROGRESS)
  started_at        DateTime         @db.Timestamp
  expires_at        DateTime         @db.Timestamp
  submitted_at      DateTime?        @db.Timestamp
  score             Decimal?         @db.Decimal(5, 2)
  passed            Boolean?
  created_at        DateTime         @default(now()) @db.Timestamp

  assessment        Assessment       @relation(fields: [assessment_id], references: [id], onDelete: Cascade)
  user              User             @relation(fields: [user_id], references: [id], onDelete: Cascade)
  attempt_questions AttemptQuestion[]
  attempt_answers   AttemptAnswer[]

  @@map("attempts")
  @@index([user_id, assessment_id])
  @@index([assessment_id, user_id, created_at])
  @@index([status])
}

model AttemptQuestion {
  id             String    @id @default(uuid()) @db.Uuid
  attempt_id     String    @db.Uuid
  question_id    String    @db.Uuid
  display_order  Int

  attempt        Attempt   @relation(fields: [attempt_id], references: [id], onDelete: Cascade)
  question       Question  @relation(fields: [question_id], references: [id], onDelete: Cascade)

  @@map("attempt_questions")
  @@unique([attempt_id, question_id])
  @@index([attempt_id, display_order])
  @@index([attempt_id, question_id])
}

model AttemptAnswer {
  id                String     @id @default(uuid()) @db.Uuid
  attempt_id        String     @db.Uuid
  question_id       String     @db.Uuid
  selected_option_id String?   @db.Uuid
  answered_at       DateTime?  @db.Timestamp
  is_correct        Boolean?

  attempt           Attempt    @relation(fields: [attempt_id], references: [id], onDelete: Cascade)
  question          Question   @relation(fields: [question_id], references: [id], onDelete: Cascade)
  selected_option   QuestionOption? @relation(fields: [selected_option_id], references: [id], onDelete: SetNull)

  @@map("attempt_answers")
  @@unique([attempt_id, question_id])
  @@index([attempt_id, question_id])
  @@index([attempt_id])
  @@index([question_id])
}

model PasswordResetToken {
  id         String    @id @default(uuid()) @db.Uuid
  user_id    String    @db.Uuid
  token_hash String    @unique @db.VarChar(255)
  expires_at DateTime  @db.Timestamp
  used_at    DateTime? @db.Timestamp
  created_at DateTime  @default(now()) @db.Timestamp

  user       User      @relation(fields: [user_id], references: [id], onDelete: Cascade)

  @@map("password_reset_tokens")
  @@index([user_id])
  @@index([expires_at])
}

model AuditLog {
  id           String    @id @default(uuid()) @db.Uuid
  actor_user_id String?  @db.Uuid
  action       String    @db.VarChar(100)
  entity_type  String    @db.VarChar(100)
  entity_id    String    @db.Uuid
  metadata     Json?
  created_at   DateTime  @default(now()) @db.Timestamp

  actor        User?     @relation(fields: [actor_user_id], references: [id], onDelete: SetNull)

  @@map("audit_logs")
  @@index([actor_user_id])
  @@index([entity_type, entity_id])
  @@index([action])
  @@index([created_at])
}

model RefreshToken {
  id            String    @id @default(uuid()) @db.Uuid
  user_id       String    @db.Uuid
  token_hash    String    @unique @db.VarChar(255)
  expires_at    DateTime  @db.Timestamp
  revoked_at    DateTime? @db.Timestamp
  created_at    DateTime  @default(now()) @db.Timestamp

  user          User      @relation(fields: [user_id], references: [id], onDelete: Cascade)

  @@map("refresh_tokens")
  @@index([user_id])
  @@index([expires_at])
  @@index([revoked_at])
}

model LessonComment {
  id         String    @id @default(uuid()) @db.Uuid
  lesson_id  String    @db.Uuid
  user_id    String    @db.Uuid
  parent_id  String?   @db.Uuid
  content    String    @db.Text
  created_at DateTime  @default(now()) @db.Timestamp
  updated_at DateTime  @updatedAt @db.Timestamp

  lesson     Lesson    @relation(fields: [lesson_id], references: [id], onDelete: Cascade)
  user       User      @relation(fields: [user_id], references: [id], onDelete: Cascade)
  parent     LessonComment?  @relation("CommentReplies", fields: [parent_id], references: [id], onDelete: Cascade)
  replies    LessonComment[] @relation("CommentReplies")

  @@map("lesson_comments")
  @@index([lesson_id, created_at])
  @@index([parent_id])
}
